(PC-2209): fixed CSS for Verso header, which was scrolling when title is too long

--- a/src/styles/components/layout/Verso/_verso-header.scss
+++ b/src/styles/components/layout/Verso/_verso-header.scss
@@ -1,5 +1,6 @@
 .verso-header {
   position: relative;
+  word-wrap: break-word;
 
   .drag {
     bottom: 0;
